# Pulsar_Ellipticity_Inference

./: LICENSE  hier_numpyro.ipynb  main.py  o1_data_basic.csv  pyproject.toml  simulated_data.ipynb
