[project]
name = "pulsar-ellipticity-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=1.2.0",
    "arviz-plots>=1.2.0",
    "ipykernel>=7.3.0",
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "numpyro>=0.21.0",
]
